--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ h1 {
     font-size: 60px;
     margin-bottom: 15px;
     animation: moveGlow 3s infinite;
-}@keyframes moveGlow {
+}
+@keyframes moveGlow {
     0% {
         transform: translateY(0);
         text-shadow: 0 0 10px yellow;
@@ -34,7 +35,7 @@ h1 {
         transform: translateY(0);
         text-shadow: 0 0 10px yellow;
     }
-}button {
+button {
     margin-top: 25px;
     padding: 20px 45px;
     font-size: 22px;
@@ -43,7 +44,8 @@ h1 {
     background: linear-gradient(45deg, #ffcc00, #ff9900);
     cursor: pointer;
     transition: 0.3s;
-}button:hover {
+}
+button:hover {
     transform: scale(1.1);
     box-shadow: 0 0 20px orange;
 }
